解决添加task错乱的问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="view_component_button_cancel">取消</string>
+    <string name="view_component_button_send">发送</string>
+    <string name="view_component_limit_min_warn">输入内容不能少于%1$d字</string>
+    <string name="view_component_limit_max_warn">输入内容不能超过%1$d字</string>
 </resources>
