--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="view_component_button_send">发送</string>
     <string name="view_component_limit_min_warn">输入内容不能少于%1$d字</string>
     <string name="view_component_limit_max_warn">输入内容不能超过%1$d字</string>
+    <string name="edit">编辑</string>
 </resources>
